# glint

./: .gitignore  CMakeLists.txt  ReadMe.md  glint.rc  glint.res  gmon.out
assets/shader/: standard.frag  standard.vert
assets/shader/default/: compile.bat  default.frag  default.vert  default.vert.spv
assets/shader/standard/: compile.bat  standard.frag  standard.frag.spv  standard.vert  standard.vert.spv
include/: discord_self.h  imgui_self.h  log.h  media.h  mvk_core.h  settings.h  utils.h  window.h
src/core/: log.cpp  main.cpp  media.cpp  settings.cpp  utils.cpp  window.cpp
src/discord/: discord_self.cpp
src/imgui/: imgui_self.cpp
src/imgui/imgui_external/: imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp
src/vulkan/: mvk_base.cpp  mvk_buffer.cpp  mvk_command.cpp  mvk_device.cpp  mvk_framebuffer.cpp  mvk_instance.cpp  mvk_pipeline.cpp  mvk_surface.cpp  mvk_swapchain.cpp  mvk_texture.cpp
